added background image

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Git exercise</title>
 </head>
-<body>
+<body style="background-image:url('img/ocean.jpg');">
     <h1>Hello World!</h1>
-    <h2>THis is to test that change is reflected on github pages</h2>
+    <h2>This is to test that change is reflected on github pages</h2>
+
 </body>
 </html>
