changed background image properties

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Git exercise</title>
 </head>
-<body style="background-image:url('img/ocean.jpeg'); background-repeat: no-repeat;">
+<body style="background-image:url('img/ocean.jpeg');">
     <h1>Hello World!</h1>
     <h2>This is to test that change is reflected on github pages</h2>
 
